--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -1,50 +1,50 @@
-[tool.poetry]
+[project]
+authors = [
+    {name = "beam.cloud", email = "support@beam.cloud"},
+]
+requires-python = "<4.0,>=3.8"
+dependencies = [
+    "typeguard<3.0.0,>=2.13.3",
+    "typing-extensions<5.0.0,>=4.7.1",
+    "grpclib<1.0.0,>=0.4.7",
+    "grpcio==1.69.0",
+    "asgiref<4.0.0,>=3.8.1",
+    "cloudpickle<4.0.0,>=3.0.0",
+    "rich<14.0.0,>=13.9.4",
+    "click<9.0.0,>=8.1.7",
+    "protobuf<5.0.0,>=4.25.1",
+    "fastapi<1.0.0,>=0.115.11",
+    "uvicorn<1.0.0,>=0.29.0",
+    "watchdog<5.0.0,>=4.0.0",
+    "betterproto-beta9[compiler]==2.0.1",
+    "croniter<4.0.0,>=3.0.3",
+    "websocket-client<2.0.0,>=1.8.0",
+    "prompt-toolkit<4.0.0,>=3.0.48",
+    "requests<3.0.0,>=2.32.3",
+    "paramiko<4.0.0,>=3.5.0",
+]
 name = "beta9"
 version = "0.1.186"
 description = ""
-authors = ["beam.cloud <support@beam.cloud>"]
-packages = [
-    { include = "beta9", from = "src" },
-    { include = "beta9/**/*.py", from = "src" },
-]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-typeguard = "^2.13.3"
-typing-extensions = "^4.7.1"
-grpclib = "^0.4.7"
-grpcio = "1.69.0"
-asgiref = "^3.8.1"
-cloudpickle = "^3.0.0"
-rich = "^13.9.4"
-click = "^8.1.7"
-protobuf = "^4.25.1"
-fastapi = "^0.115.11"
-uvicorn = "^0.29.0"
-watchdog = "^4.0.0"
-betterproto-beta9 = { version = "2.0.1", extras = ["compiler"] }
-croniter = "^3.0.3"
-websocket-client = "^1.8.0"
-prompt-toolkit = "^3.0.48"
-requests = "^2.32.3"
-paramiko = "^3.5.0"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.2.0"
-pytest-env = "^1.1.3"
-attrs = "^23.2.0"
-docstring-parser = "^0.16"
-ruff = "*"
-gunicorn = "^22.0.0"
-requests = "^2.32.3"
-pytest-cov = "^5.0.0"
-
-[tool.poetry.scripts]
+[project.scripts]
 beta9 = "beta9.cli.main:start"
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[dependency-groups]
+dev = [
+    "pytest<9.0.0,>=8.2.0",
+    "pytest-env<2.0.0,>=1.1.3",
+    "attrs<24.0.0,>=23.2.0",
+    "docstring-parser<1.0,>=0.16",
+    "ruff",
+    "gunicorn<23.0.0,>=22.0.0",
+    "requests<3.0.0,>=2.32.3",
+    "pytest-cov<6.0.0,>=5.0.0",
+]
+
+[tool.uv]
+default-groups = []
+package = true
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
@@ -76,3 +76,7 @@ src = ["src", "test", "bin"]
 destination = "src/beta9/vendor"
 requirements = "vendors.txt"
 namespace = "beta9.vendor"
+
+[build-system]
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
