--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/uv.lock') }}
 
       - name: Install dependencies
-        run: uv pip install -r requirements.txt
+        run: uv sync
         if: steps.cached-dependencies.outputs.cache-hit != 'true'
 
       - name: Code formatting
