--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,14 +35,16 @@ jobs:
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/uv.lock') }}
 
       - name: Install dependencies
-        run: uv sync
+        run: |
+          uv sync
+          uv pip install ruff
         if: steps.cached-dependencies.outputs.cache-hit != 'true'
 
       - name: Code formatting
-        run: uv pip run ruff format .
+        run: uv run ruff format .
 
       - name: Code linting
-        run: uv pip run ruff check .
+        run: uv run ruff check .
 
       - name: Run tests
         env: 
