refactor and add build env to proto

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,11 @@
         "editor.defaultFormatter": "xaver.clang-format",
         "editor.formatOnSave": true
     },
-    "python.defaultInterpreterPath": "sdk/.venv/bin/python"
+    "python.defaultInterpreterPath": "sdk/.venv/bin/python",
+    "protoc": {
+        "path": "protoc",
+        "options": [
+            "--proto_path=${workspaceRoot}/pkg"
+        ]
+    }
 }
