--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -91,11 +91,18 @@ imageService:
       username:
       password:
     s3:
-      bucketName: beta9-images
-      region: us-east-1
-      accessKey: test
-      secretKey: test
-      endpoint:
+      primary:
+        bucketName: beta9-images
+        region: us-east-1
+        accessKey: test
+        secretKey: test
+        endpoint:
+      secondary:
+        bucketName: beta9-images-old
+        region: us-east-1
+        accessKey: test
+        secretKey: test
+        endpoint:
   runner:
     baseImageName: beta9-runner
     baseImageRegistry: registry.localhost:5000
