--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -52,6 +52,7 @@ storage:
       readAheadKB: 32768
       readAheadLargeKB: 131072
       fuseReadAheadKB: 32768
+      readAheadParallelKB: 4096
       mountOptions: []
       stagedWriteModeEnabled: true
       stagedWritePath: /tmp/geesefs-staged-write
