--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -169,7 +169,12 @@ RUN apt-get remove -y curl && \
 
 
 ENV BUILDAH_RUNTIME=/usr/local/sbin/runc
-RUN echo "nameserver 8.8.8.8" > /workspace/resolv.conf
+
+RUN mkdir -p /workspace/etc
+RUN echo "nameserver 8.8.8.8" > /workspace/etc/resolv.conf
+RUN echo '127.0.0.1 localhost' > /workspace/etc/hosts
+RUN echo 'hosts: files dns' > /workspace/etc/nsswitch.conf
+
 COPY --from=runc /usr/local/sbin/runc /usr/local/sbin/runc
 COPY --from=runc /usr/local/bin/buildah /usr/local/bin/buildah
 COPY --from=runc /usr/local/bin/skopeo /usr/local/bin/skopeo
