--- a/pkg/worker/base_runc_config.json
+++ b/pkg/worker/base_runc_config.json
@@ -174,6 +174,30 @@
 			]
 		},
 		{
+			"destination": "/usr/local/bin/dropbear",
+			"type": "bind",
+			"source": "/usr/local/bin/dropbear",
+			"options": [
+				"ro",
+				"rbind",
+				"rprivate",
+				"nosuid",
+				"nodev"
+			]
+		},
+		{
+			"destination": "/etc/dropbear",
+			"type": "tmpfs",
+			"source": "tmpfs",
+			"options": [
+				"nosuid",
+				"nodev",
+				"noexec",
+				"mode=0755",
+				"size=65536k"
+			]
+		},
+		{
 			"destination": "/usr/local/lib/python3.8/dist-packages/beam",
 			"type": "bind",
 			"source": "/workspace/sdk",
