change mount path to avoid conflicts with packages installing uv

--- a/pkg/worker/base_runc_config.json
+++ b/pkg/worker/base_runc_config.json
@@ -162,7 +162,7 @@
 			]
 		},
 		{
-			"destination": "/usr/local/bin/uv",
+			"destination": "/usr/local/bin/uv-b9",
 			"type": "bind",
 			"source": "/usr/local/bin/uv",
 			"options": [
