--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -80,6 +80,7 @@ gateway:
       allowMethods: "*"
   shutdownTimeout: 180s
   stubLimits:
+    cpu: 1280000
     memory: 32768
     maxReplicas: 10
     maxGpuCount: 2
