Feat: connect shell to any existing container (#1223)
This PR adds the ability to connect `beta9 shell` to any existing
container using
`beta9 shell --container-id [container-id]`

I replaced openssh-server with dropbear which is a lightweight SSH
server that is compiled into a single binary that listens on port 2222.
On a regular container, this server is not spun up by default and
requires `beta9 shell` to initialize it.

Once the dropbear server is spun up, it persists until the container
spins down.

--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -6,6 +6,11 @@ FROM golang:1.22.10-bookworm AS golang
 RUN apt-get update && apt-get install -y curl git
 
 
+FROM ubuntu:20.04 as dropbear
+RUN apt update && apt install curl bzip2 zlib1g-dev make gcc -y  
+RUN mkdir /dropbear &&  curl https://dropbear.nl/mirror/releases/dropbear-2025.88.tar.bz2 -o /dropbear/dropbear-2025.88.tar.bz2
+RUN cd /dropbear && tar -xvf dropbear-2025.88.tar.bz2 && cd dropbear-2025.88  && ./configure && make PROGRAMS="dropbear" && mv dropbear /usr/local/bin/dropbear 
+
 # runc
 # ========================
 # FIXME: once we upgrade to 1.23, we can just use "FROM golang"
@@ -194,6 +199,7 @@ fi
 COPY --from=worker /usr/local/bin/worker /usr/local/bin/worker
 COPY ./sdk/src/beta9 /workspace/sdk
 COPY --from=uv /root/.local/bin/uv /usr/local/bin/uv
+COPY --from=dropbear /usr/local/bin/dropbear /usr/local/bin/dropbear
 
 VOLUME "/usr/lib/x86_64-linux-gnu"
 VOLUME "/usr/lib/aarch64-linux-gnu"
