--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get install -y curl git
 FROM ubuntu:20.04 as dropbear
 RUN apt update && apt install curl bzip2 zlib1g-dev make gcc -y  
 RUN mkdir /dropbear &&  curl https://dropbear.nl/mirror/releases/dropbear-2025.88.tar.bz2 -o /dropbear/dropbear-2025.88.tar.bz2
-RUN cd /dropbear && tar -xvf dropbear-2025.88.tar.bz2 && cd dropbear-2025.88  && ./configure && make PROGRAMS="dropbear" && mv dropbear /usr/local/bin/dropbear 
+RUN cd /dropbear && tar -xvf dropbear-2025.88.tar.bz2 && cd dropbear-2025.88  && ./configure && make PROGRAMS="dropbear" && mv dropbear /usr/local/bin/dropbear
 
 # runc
 # ========================
@@ -168,7 +168,7 @@ RUN MOUNT_S3_URL=$(if [ "$TARGETARCH" = "arm64" ]; then echo $MOUNT_S3_URL_ARM64
 RUN curl -L https://github.com/NVIDIA/cuda-checkpoint/raw/refs/heads/main/bin/x86_64_Linux/cuda-checkpoint -o /usr/local/bin/cuda-checkpoint && \
     chmod +x /usr/local/bin/cuda-checkpoint
 
-RUN apt-get install ripgrep
+RUN apt-get install -y ripgrep
 
 RUN apt-get remove -y curl && \
     apt-get clean && apt-get autoremove -y && apt-get autopurge -y && \
