--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -6,10 +6,16 @@ FROM golang:1.22.10-bookworm AS golang
 RUN apt-get update && apt-get install -y curl git
 
 
+
 FROM debian:bookworm as dropbear
+ENV DROPBEAR_VERSION=2025.88
+ENV DROPBEAR_SHA256=783f50ea27b17c16da89578fafdb6decfa44bb8f6590e5698a4e4d3672dc53d4
+
 RUN apt update && apt install curl bzip2 zlib1g-dev make gcc -y  
-RUN mkdir /dropbear &&  curl https://dropbear.nl/mirror/releases/dropbear-2025.88.tar.bz2 -o /dropbear/dropbear-2025.88.tar.bz2
-RUN cd /dropbear && tar -xvf dropbear-2025.88.tar.bz2 && cd dropbear-2025.88  && ./configure --enable-static --enable-pam=no CPPFLAGS="-DDISABLE_PAM" LDFLAGS="-static" && make PROGRAMS="dropbear" && mv dropbear /usr/local/bin/dropbear 
+RUN mkdir /dropbear && \
+    curl -fsSL https://dropbear.nl/mirror/releases/dropbear-${DROPBEAR_VERSION}.tar.bz2 -o /dropbear/dropbear.tar.bz2 && \
+    echo "${DROPBEAR_SHA256}  /dropbear/dropbear.tar.bz2" | sha256sum -c -
+RUN cd /dropbear && tar -xvf dropbear.tar.bz2 && cd dropbear-${DROPBEAR_VERSION} && ./configure --enable-static --enable-pam=no CPPFLAGS="-DDISABLE_PAM" LDFLAGS="-static" && make PROGRAMS="dropbear" && mv dropbear /usr/local/bin/dropbear 
 
 # runc
 # ========================
