--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -91,6 +91,8 @@ WORKDIR /workspace
 COPY go.mod go.sum ./
 RUN go mod download
 COPY --exclude=sdk . .
+
+RUN go build -gcflags "all=-N" -o /usr/local/bin/worker-debug ./cmd/worker/main.go
 RUN go build -o /usr/local/bin/worker ./cmd/worker/main.go
 
 # uv
@@ -205,6 +207,7 @@ else \
 fi
 
 COPY --from=worker /usr/local/bin/worker /usr/local/bin/worker
+COPY --from=worker /usr/local/bin/worker-debug /usr/local/bin/worker-debug
 COPY ./sdk/src/beta9 /workspace/sdk
 COPY --from=uv /root/.local/bin/uv /usr/local/bin/uv
 COPY --from=dropbear /usr/local/bin/dropbear /usr/local/bin/dropbear
