--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -33,13 +33,15 @@ storage:
     prefetch: 1
     bufferSize: 300
   workspaceStorage:
-    mode: geese
+    mode: geese # TODO: Change to alluxio
     baseMountPath: /workspace/data
     defaultBucketPrefix: workspace
     defaultAccessKey: test
     defaultSecretKey: test
     defaultEndpointUrl: http://localstack:4566
     defaultRegion: us-east-1
+    alluxio:
+      debug: false
     geese:
       debug: false
       fsyncOnClose: true
