--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -189,6 +189,8 @@ RUN mkdir -p /workspace/etc
 RUN echo "nameserver 8.8.8.8" > /workspace/etc/resolv.conf
 RUN echo '127.0.0.1 localhost' > /workspace/etc/hosts
 RUN echo 'hosts: files dns' > /workspace/etc/nsswitch.conf
+COPY ./bin/beta9-cli /usr/local/bin/beta9
+RUN chmod +x /usr/local/bin/beta9
 
 COPY --from=runc /usr/local/sbin/runc /usr/local/sbin/runc
 COPY --from=runc /usr/local/bin/buildah /usr/local/bin/buildah
