--- a/pkg/worker/base_runc_config.json
+++ b/pkg/worker/base_runc_config.json
@@ -174,6 +174,18 @@
 			]
 		},
 		{
+			"destination": "/usr/bin/beam",
+			"type": "bind",
+			"source": "/usr/local/bin/beta9",
+			"options": [
+				"ro",
+				"rbind",
+				"rprivate",
+				"nosuid",
+				"nodev"
+			]
+		},
+		{
 			"destination": "/usr/local/bin/uv-b9",
 			"type": "bind",
 			"source": "/usr/local/bin/uv",
