--- a/hack/okteto.yaml
+++ b/hack/okteto.yaml
@@ -11,6 +11,7 @@ dev:
         go build -o /workspace/bin/gateway /workspace/cmd/gateway/main.go
         go build -o /workspace/bin/worker /workspace/cmd/worker/main.go
       BUILD_BINARY_PATH: /workspace/bin/gateway
+      CONFIG_PATH: /workspace/config.yaml
     forward:
     - 1993:1993
     - 1994:1994
