--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -33,8 +33,8 @@ storage:
     prefetch: 1
     bufferSize: 300
   workspaceStorage:
-    mode: geese
     baseMountPath: /workspace/data
+    defaultStorageMode: geese
     defaultBucketPrefix: workspace
     defaultAccessKey: test
     defaultSecretKey: test
