--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -162,7 +162,8 @@ worker:
       priority: 1
       jobSpec:
         nodeSelector: {}
-      criuEnabled: false
+      criuEnabled: true
+      checkpointPath: /data/checkpoints
       poolSizing:
         defaultWorkerCpu: 1000m
         defaultWorkerGpuType: ""
@@ -230,14 +231,10 @@ worker:
     minMachinesAvailable: 1 # minMachinesAvailable only applies to external pools
   criu:
     mode: nvidia
+    enabled: true
     storage:
-      mountPath: /data/checkpoints
       mode: local
-      objectStore:
-        bucketName: beta9-checkpoints
-        accessKey: test
-        secretKey: test
-        endpointURL: http://localstack:4566
+      mountPath: /data/checkpoints
     cedana:
       # Can be unix, tcp, vsock
       protocol: unix
